--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,25 +2,24 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch Program",
-            "runtimeArgs": ["--nolazy", "-r", "ts-node/register"],
-            "args": ["${workspaceFolder}/src/main.ts"],
-            "autoAttachChildProcesses": true
-        },
-        {
-            "name": "Debug Jest Tests",
-            "type": "node",
-            "request": "launch",
-            "runtimeArgs": [
-              "--inspect-brk",
-              "${workspaceRoot}/node_modules/.bin/jest",
-              "--runInBand",
-              "--coverage",
-              "false"
-            ],
-            "console": "integratedTerminal"
-          }
+          "type": "node",
+          "request": "launch",
+          "name": "Debug Nest Framework",
+          "args": [
+              "${workspaceFolder}/src/main.ts"
+          ],
+          "runtimeArgs": [
+              "--nolazy",
+              "-r",
+              "ts-node/register",
+              "-r",
+              "tsconfig-paths/register"
+          ],
+          "sourceMaps": true,
+          "envFile": "${workspaceFolder}/.env",
+          "cwd": "${workspaceRoot}",
+          "console": "integratedTerminal",
+          "protocol": "inspector"
+      }
     ]
 }
